Fix Swagger UI routing and trailing slash handling

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,14 @@
       "dest": "index.js"
     },
     {
+      "src": "/api-docs/",
+      "dest": "index.js"
+    },
+    {
+      "src": "/api-docs/swagger.json",
+      "dest": "index.js"
+    },
+    {
       "src": "/api-docs/(.*)",
       "dest": "index.js"
     },
