Fix Swagger UI asset serving

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,15 @@
   ],
   "routes": [
     {
-      "src": "/api-docs/(.*)",
+      "src": "/api-docs/swagger.json",
       "dest": "index.js"
+    },
+    {
+      "src": "/api-docs/(.*)",
+      "dest": "index.js",
+      "headers": {
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
     },
     {
       "src": "/health",
