--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "firebase-admin": "^12.0.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.28.0",
     "swagger-jsdoc": "^6.2.8",
